--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Rubik', sans-serif;
-    background-color: black;
-    color: white;
+    color: white !important;
+    background-color: #202020;
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
@@ -11,4 +11,14 @@ body {
 
 body::-webkit-scrollbar {
     display: none;
+}
+
+.parent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    padding-right: 100px;
+    padding-left: 100px;
 }
